--- a/Furni/Views/About/Index.cshtml
+++ b/Furni/Views/About/Index.cshtml
@@ -1,9 +1,10 @@
 ﻿<title>
 	@{
-		ViewData["Title"] = "Haqqinda";
+		ViewData["Title"] = "Haqqimizda";
 	}
 </title>
-<!-- Start Hero Section -->
+@model List<Team>
+	<!-- Start Hero Section -->
 	<div class="hero">
 		<div class="container">
 			<div class="row justify-content-between">
@@ -85,78 +86,50 @@
 		</div>
 	</div>
 	<!-- End Why Choose Us Section -->
-	<!-- Start Team Section -->
-	<div class="untree_co-section">
+
+
+
+
+<div class="col-lg-5 mx-auto text-center">
+	<h2 class="section-title">Our Team</h2>
+</div>
+	<div   class="untree_co-section product-section before-footer-section">
 		<div class="container">
+	 
+			<div  class="row">
 
-			<div class="row mb-5">
-				<div class="col-lg-5 mx-auto text-center">
-					<h2 class="section-title">Our Team</h2>
-				</div>
-			</div>
+				 
+			@foreach (var item in Model)
+			{
 
-			<div class="row">
 
-				<!-- Start Column 1 -->
 				<div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
-					<img src="images/person_1.jpg" class="img-fluid mb-5">
-					<h3 clas><a href="#"><span class="">Lawson</span> Arnold</a></h3>
-					<span class="d-block position mb-4">CEO, Founder, Atty.</span>
-					<p>
-						Separated they live in.
-						Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
-					</p>
-					<p class="mb-0"><a href="#" class="more dark">Learn More <span class="icon-arrow_forward"></span></a></p>
-				</div>
-				<!-- End Column 1 -->
-				<!-- Start Column 2 -->
-				<div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
-					<img src="images/person_2.jpg" class="img-fluid mb-5">
+					<img src="@item.ImgUrl" class="img-fluid mb-5">
 
-					<h3 clas><a href="#"><span class="">Jeremy</span> Walker</a></h3>
-					<span class="d-block position mb-4">CEO, Founder, Atty.</span>
+					<h3 clas><a href="#"><span class="">@item.Name</span>.</a></h3>
+					<span class="d-block position mb-4">@item.Status</span>
 					<p>
-						Separated they live in.
-						Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
-					</p>
-					<p class="mb-0"><a href="#" class="more dark">Learn More <span class="icon-arrow_forward"></span></a></p>
-
-				</div>
-				<!-- End Column 2 -->
-				<!-- Start Column 3 -->
-				<div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
-					<img src="images/person_3.jpg" class="img-fluid mb-5">
-					<h3 clas><a href="#"><span class="">Patrik</span> White</a></h3>
-					<span class="d-block position mb-4">CEO, Founder, Atty.</span>
-					<p>
-						Separated they live in.
-						Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
-					</p>
-					<p class="mb-0"><a href="#" class="more dark">Learn More <span class="icon-arrow_forward"></span></a></p>
-				</div>
-				<!-- End Column 3 -->
-				<!-- Start Column 4 -->
-				<div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
-					<img src="images/person_4.jpg" class="img-fluid mb-5">
-
-					<h3 clas><a href="#"><span class="">Kathryn</span> Ryan</a></h3>
-					<span class="d-block position mb-4">CEO, Founder, Atty.</span>
-					<p>
-						Separated they live in.
-						Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
+						 @item.Description
 					</p>
 					<p class="mb-0"><a href="#" class="more dark">Learn More <span class="icon-arrow_forward"></span></a></p>
 
 
 				</div>
-				<!-- End Column 4 -->
 
 
+
+			}
+			 
+			 
+
+				  
 
 			</div>
 		</div>
 	</div>
-	<!-- End Team Section -->
+
+
+
 	<!-- Start Testimonial Slider -->
 	<div class="testimonial-section before-footer-section">
 		<div class="container">
@@ -254,4 +227,5 @@
 		</div>
 	</div>
 	<!-- End Testimonial Slider -->
+ 
  
