--- a/Furni/Views/Blog/Index.cshtml
+++ b/Furni/Views/Blog/Index.cshtml
@@ -3,6 +3,7 @@
 		ViewData["Title"] = "Blog";
 	}
 </title>
+@model List<Blog>
 <!-- Start Hero Section -->
 	<div class="hero">
 		<div class="container">
@@ -28,114 +29,26 @@
 		<div class="container">
 
 			<div class="row">
+ 
+			@foreach(var item in Model)
+			{
 
 				<div class="col-12 col-sm-6 col-md-4 mb-5">
 					<div class="post-entry">
-						<a href="#" class="post-thumbnail"><img src="images/post-1.jpg" alt="Image" class="img-fluid"></a>
+						<a href="#" class="post-thumbnail"><img src="@item.ImgUrl" alt="Image" class="img-fluid"></a>
 						<div class="post-content-entry">
-							<h3><a href="#">First Time Home Owner Ideas</a></h3>
+							<h3><a href="#">@item.Description</a></h3>
 							<div class="meta">
-								<span>by <a href="#">Kristin Watson</a></span> <span>on <a href="#">Dec 19, 2021</a></span>
+								<span>by <a href="#"> @item.By</a></span> <span>on <a href="#">Dec 12, 2021</a></span>
 							</div>
 						</div>
 					</div>
 				</div>
 
-				<div class="col-12 col-sm-6 col-md-4 mb-5">
-					<div class="post-entry">
-						<a href="#" class="post-thumbnail"><img src="images/post-2.jpg" alt="Image" class="img-fluid"></a>
-						<div class="post-content-entry">
-							<h3><a href="#">How To Keep Your Furniture Clean</a></h3>
-							<div class="meta">
-								<span>by <a href="#">Robert Fox</a></span> <span>on <a href="#">Dec 15, 2021</a></span>
-							</div>
-						</div>
-					</div>
-				</div>
 
-				<div class="col-12 col-sm-6 col-md-4 mb-5">
-					<div class="post-entry">
-						<a href="#" class="post-thumbnail"><img src="images/post-3.jpg" alt="Image" class="img-fluid"></a>
-						<div class="post-content-entry">
-							<h3><a href="#">Small Space Furniture Apartment Ideas</a></h3>
-							<div class="meta">
-								<span>by <a href="#">Kristin Watson</a></span> <span>on <a href="#">Dec 12, 2021</a></span>
-							</div>
-						</div>
-					</div>
-				</div>
+			} 
 
-				<div class="col-12 col-sm-6 col-md-4 mb-5">
-					<div class="post-entry">
-						<a href="#" class="post-thumbnail"><img src="images/post-1.jpg" alt="Image" class="img-fluid"></a>
-						<div class="post-content-entry">
-							<h3><a href="#">First Time Home Owner Ideas</a></h3>
-							<div class="meta">
-								<span>by <a href="#">Kristin Watson</a></span> <span>on <a href="#">Dec 19, 2021</a></span>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-12 col-sm-6 col-md-4 mb-5">
-					<div class="post-entry">
-						<a href="#" class="post-thumbnail"><img src="images/post-2.jpg" alt="Image" class="img-fluid"></a>
-						<div class="post-content-entry">
-							<h3><a href="#">How To Keep Your Furniture Clean</a></h3>
-							<div class="meta">
-								<span>by <a href="#">Robert Fox</a></span> <span>on <a href="#">Dec 15, 2021</a></span>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-12 col-sm-6 col-md-4 mb-5">
-					<div class="post-entry">
-						<a href="#" class="post-thumbnail"><img src="images/post-3.jpg" alt="Image" class="img-fluid"></a>
-						<div class="post-content-entry">
-							<h3><a href="#">Small Space Furniture Apartment Ideas</a></h3>
-							<div class="meta">
-								<span>by <a href="#">Kristin Watson</a></span> <span>on <a href="#">Dec 12, 2021</a></span>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-12 col-sm-6 col-md-4 mb-5">
-					<div class="post-entry">
-						<a href="#" class="post-thumbnail"><img src="images/post-1.jpg" alt="Image" class="img-fluid"></a>
-						<div class="post-content-entry">
-							<h3><a href="#">First Time Home Owner Ideas</a></h3>
-							<div class="meta">
-								<span>by <a href="#">Kristin Watson</a></span> <span>on <a href="#">Dec 19, 2021</a></span>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-12 col-sm-6 col-md-4 mb-5">
-					<div class="post-entry">
-						<a href="#" class="post-thumbnail"><img src="images/post-2.jpg" alt="Image" class="img-fluid"></a>
-						<div class="post-content-entry">
-							<h3><a href="#">How To Keep Your Furniture Clean</a></h3>
-							<div class="meta">
-								<span>by <a href="#">Robert Fox</a></span> <span>on <a href="#">Dec 15, 2021</a></span>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-12 col-sm-6 col-md-4 mb-5">
-					<div class="post-entry">
-						<a href="#" class="post-thumbnail"><img src="images/post-3.jpg" alt="Image" class="img-fluid"></a>
-						<div class="post-content-entry">
-							<h3><a href="#">Small Space Furniture Apartment Ideas</a></h3>
-							<div class="meta">
-								<span>by <a href="#">Kristin Watson</a></span> <span>on <a href="#">Dec 12, 2021</a></span>
-							</div>
-						</div>
-					</div>
-				</div>
+				
 
 			</div>
 		</div>
