--- a/Furni/Views/_ViewImports.cshtml
+++ b/Furni/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Furni
 @using Furni.Models
+@using Furni.Entities
+ @using Furni.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
